# agente-6-langgraph-adk

./: .env.example  .gitignore  README.md  checkpoints.db-shm  checkpoints.db-wal  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_risk_agent.py
.claude/: settings.local.json
docs/: LAB_GUIADO.md  LAB_GUIADO_Google_A2A.MD  LANGGRAPH_NODES_EDGES.md  SETUP.md
risk_agent/: __init__.py  agent.json  agent.py  tools.py
risk_agent/.adk/: session.db
src/: __init__.py  config.py  constants.py  graph.py  logging_config.py  models.py  state.py
src/clients/: __init__.py  adk_client.py  llm.py  vector_search.py
src/nodes/: __init__.py  evaluator.py  rag_retrieval.py  risk_agent.py  router.py  summarizer.py  synthesis.py
tests/: conftest.py
tests/integration/: test_graph.py
tests/unit/: test_config.py  test_models.py  test_nodes.py  test_router.py  test_state.py
